v3.3:
  - Tomo metadata viewer increase contrast when left clicking on the preview image.
  - Import tilt series movies using a pattern instead of from mdoc files was improved and admits brackets [] in the
    basename of the files.

  Developers:
  - Coordinates 3D object have a new attribute _score to store the coordinates score, when necessary.

v3.2:
  - New protocol: "Landmarks to 2D coordinates". To jump to SPA from 3d info.
  - Tolerate empty lines in tlt files
  - Motion correction outputs renamed and fixed for odd/even and dose weighted
  - Tilt series can be sent to Xmipp metadata viewer for subsetting/inspection
  - TomoMetadataViewer shows the preview of the slice and some metadata (tiltAxisAngle)
  - Fix: Imod not needed for importing coordinates, unless imod mode is selected
  - Compose tilt series: Added "exclusion words" to filter out mdocs

  Developers:
  - angleAxis1 and angleAxis2 removed from the TomoAcquisition class

v3.1.9:
  - Reconstruction template fixed.
  - Relion 4 /dynamo  template tweaked. Specifically dynamo alignment
  - HIV template tweaked: one 3d classification removed. Mapback uses the 3d class.
  - OddEven functionality reviewed: Tilt Series set and Tomograms set have oddeven attributes/flags and
    there is no need for separate sets anymore. odd and even are internally referenced.
  - Added a new ctf tomo viewer (CtfConsensusTomoViewer)
  - ComposeTS: allowNull control added, removed validation and added _possibleOutputs

  Developers:
  - SubTomogram.getVolName() uses Coordinate3D.getTomoId()

v3.1.8:
  - SetOfSubtomoClasses improved: sampling rate set, coordinates injected

v3.1.7:
  - Templates tweaked: title and some mpi values

  Developers:
  - SetOfCoordinates and SetOfTiltSeries have a getTSIds method to return TS is contained (+ test)

v3.1.6:
  - Tilt order inferred from dose when tlt file has dose
  - Fix: subtomograms with coordinates work in absence of volId